objects/LAT_MasiveCreditLineLine__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountAN8__c</fullName>
        <label>AN8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LAT_MasiveCreditLineLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ejecutado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Header</label>
        <referenceTo>LAT_MasiveCreditLineHeader__c</referenceTo>
        <relationshipName>LAT_MasiveCreditLineLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_New_Value__c</fullName>
        <label>Nuevo Valor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_OldValue__c</fullName>
        <label>Antiguo Valor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Linea</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>